// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser properties of type  Limited Concept  1`] = `
LimitedTest {
  "$id": "ID-29",
  "$typename": "LimitedTest",
  "_PI_limitedNonOpt": LimitedNonOptional {
    "$id": "ID-26",
    "$typename": "LimitedNonOptional",
    "_PI_other": PiElementReference {
      "_PI_pathname": Array [
        "FIRST",
      ],
      "_PI_referred": OtherLimited {
        "$id": "ID-4",
        "$typename": "OtherLimited",
        "container": null,
        "name": "FIRST",
        "propertyIndex": undefined,
        "propertyName": "",
      },
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "other",
      "typeName": "OtherLimited",
    },
    "_PI_otherMulti": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "container": null,
          "name": "SECOND",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "otherMulti",
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "container": null,
          "name": "FIRST",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "otherMulti",
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "container": null,
          "name": "FIRST",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "otherMulti",
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "container": null,
          "name": "SECOND",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 3,
        "propertyName": "otherMulti",
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "container": null,
          "name": "SECOND",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 4,
        "propertyName": "otherMulti",
        "typeName": "OtherLimited",
      },
    ],
    "_PI_visMulti": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "visMulti",
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "visMulti",
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "visMulti",
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "-",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "visMultiWithExtra",
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "visMultiWithExtra",
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "-",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "visMultiWithExtra",
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "container": null,
        "name": "-",
        "propertyIndex": undefined,
        "propertyName": "",
      },
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "visWithExtra",
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "container": null,
        "name": "+",
        "propertyIndex": undefined,
        "propertyName": "",
      },
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "visibility",
      "typeName": "VisibilityKind",
    },
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "limitedNonOpt",
  },
  "_PI_limitedOpt": LimitedOptional {
    "$id": "ID-27",
    "$typename": "LimitedOptional",
    "_PI_visMulti": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "#",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "visMulti",
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "-",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "visMultiWithExtra",
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "-",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "visMultiWithExtra",
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "-",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "visMultiWithExtra",
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "container": null,
        "name": "-",
        "propertyIndex": undefined,
        "propertyName": "",
      },
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "visWithExtra",
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "container": null,
        "name": "+",
        "propertyIndex": undefined,
        "propertyName": "",
      },
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "visibility",
      "typeName": "VisibilityKind",
    },
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "limitedOpt",
  },
  "_PI_limitedOpt2": LimitedOptional {
    "$id": "ID-28",
    "$typename": "LimitedOptional",
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "limitedOpt2",
  },
  "container": TestParserModel {
    "$id": "ID-25",
    "$typename": "TestParserModel",
    "_PI_lim": [Circular],
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "anyNameWillDo",
  "propertyIndex": undefined,
  "propertyName": "lim",
}
`;

exports[`Parser properties of type  Part  1`] = `
PartsTest {
  "$id": "ID-36",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$id": "ID-35",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$id": "ID-31",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "visibility",
        "typeName": "VisibilityKind",
      },
      "container": [Circular],
      "content": "stringLiteral",
      "optContent": 10,
      "propertyIndex": undefined,
      "propertyName": "part",
    },
    "_PI_partList": Array [
      PartConcept {
        "$id": "ID-32",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "#",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "otherString",
        "optContent": 0,
        "propertyIndex": 0,
        "propertyName": "partList",
      },
      PartConcept {
        "$id": "ID-33",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "-",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralXXX",
        "optContent": 123,
        "propertyIndex": 1,
        "propertyName": "partList",
      },
      PartConcept {
        "$id": "ID-34",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "+",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralYYY",
        "optContent": 0,
        "propertyIndex": 2,
        "propertyName": "partList",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "directParts",
  },
  "_PI_partsOfParts": null,
  "container": TestParserModel {
    "$id": "ID-30",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "myName",
  "propertyIndex": undefined,
  "propertyName": "parts",
}
`;

exports[`Parser properties of type  Part and Sub Parts  1`] = `
PartsTest {
  "$id": "ID-85",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$id": "ID-52",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$id": "ID-48",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "visibility",
        "typeName": "VisibilityKind",
      },
      "container": [Circular],
      "content": "stringLiteral",
      "optContent": 10,
      "propertyIndex": undefined,
      "propertyName": "part",
    },
    "_PI_partList": Array [
      PartConcept {
        "$id": "ID-49",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "#",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "otherString",
        "optContent": 0,
        "propertyIndex": 0,
        "propertyName": "partList",
      },
      PartConcept {
        "$id": "ID-50",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "-",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralXXX",
        "optContent": 123,
        "propertyIndex": 1,
        "propertyName": "partList",
      },
      PartConcept {
        "$id": "ID-51",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "+",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralYYY",
        "optContent": 0,
        "propertyIndex": 2,
        "propertyName": "partList",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "directParts",
  },
  "_PI_partsOfParts": WithSubSubParts {
    "$id": "ID-84",
    "$typename": "WithSubSubParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": SubConcept {
      "$id": "ID-61",
      "$typename": "SubConcept",
      "_PI_listSub": Array [
        WithDirectParts {
          "$id": "ID-57",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$id": "ID-55",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "container": null,
                "name": "+",
                "propertyIndex": undefined,
                "propertyName": "",
              },
              "container": [Circular],
              "propertyIndex": undefined,
              "propertyName": "visibility",
              "typeName": "VisibilityKind",
            },
            "container": [Circular],
            "content": "stringLiteralFGT",
            "optContent": 10,
            "propertyIndex": undefined,
            "propertyName": "part",
          },
          "_PI_partList": Array [
            PartConcept {
              "$id": "ID-56",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "#",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "otherStringZZZ",
              "optContent": 0,
              "propertyIndex": 0,
              "propertyName": "partList",
            },
          ],
          "container": [Circular],
          "propertyIndex": 0,
          "propertyName": "listSub",
        },
        WithDirectParts {
          "$id": "ID-60",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$id": "ID-58",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "_PI_pathname": Array [
                "-",
              ],
              "_PI_referred": VisibilityKind {
                "$id": "ID-2",
                "$typename": "VisibilityKind",
                "container": null,
                "name": "-",
                "propertyIndex": undefined,
                "propertyName": "",
              },
              "container": [Circular],
              "propertyIndex": undefined,
              "propertyName": "visibility",
              "typeName": "VisibilityKind",
            },
            "container": [Circular],
            "content": "stringLiteralZZZ",
            "optContent": 1045,
            "propertyIndex": undefined,
            "propertyName": "part",
          },
          "_PI_partList": Array [
            PartConcept {
              "$id": "ID-59",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "#",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "otherString",
              "optContent": 0,
              "propertyIndex": 0,
              "propertyName": "partList",
            },
          ],
          "container": [Circular],
          "propertyIndex": 1,
          "propertyName": "listSub",
        },
      ],
      "_PI_normalSub": WithDirectParts {
        "$id": "ID-54",
        "$typename": "WithDirectParts",
        "_PI_optList": Array [],
        "_PI_optPart": null,
        "_PI_part": PartConcept {
          "$id": "ID-53",
          "$typename": "PartConcept",
          "_PI_visibility": PiElementReference {
            "_PI_pathname": Array [
              "+",
            ],
            "_PI_referred": VisibilityKind {
              "$id": "ID-1",
              "$typename": "VisibilityKind",
              "container": null,
              "name": "+",
              "propertyIndex": undefined,
              "propertyName": "",
            },
            "container": [Circular],
            "propertyIndex": undefined,
            "propertyName": "visibility",
            "typeName": "VisibilityKind",
          },
          "container": [Circular],
          "content": "stringLiteral",
          "optContent": 10,
          "propertyIndex": undefined,
          "propertyName": "part",
        },
        "_PI_partList": Array [],
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "normalSub",
      },
      "_PI_optListSub": Array [],
      "_PI_optionalSub": null,
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "part",
    },
    "_PI_partList": Array [
      SubConcept {
        "$id": "ID-74",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$id": "ID-73",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$id": "ID-72",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "+",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLiteral",
              "optContent": 10,
              "propertyIndex": undefined,
              "propertyName": "part",
            },
            "_PI_partList": Array [],
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "listSub",
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$id": "ID-66",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$id": "ID-62",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "container": null,
                "name": "+",
                "propertyIndex": undefined,
                "propertyName": "",
              },
              "container": [Circular],
              "propertyIndex": undefined,
              "propertyName": "visibility",
              "typeName": "VisibilityKind",
            },
            "container": [Circular],
            "content": "stringLiteral",
            "optContent": 10,
            "propertyIndex": undefined,
            "propertyName": "part",
          },
          "_PI_partList": Array [
            PartConcept {
              "$id": "ID-63",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "#",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "otherString",
              "optContent": 0,
              "propertyIndex": 0,
              "propertyName": "partList",
            },
            PartConcept {
              "$id": "ID-64",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "-",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLiteralXXX",
              "optContent": 123,
              "propertyIndex": 1,
              "propertyName": "partList",
            },
            PartConcept {
              "$id": "ID-65",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "+",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLiteralYYY",
              "optContent": 0,
              "propertyIndex": 2,
              "propertyName": "partList",
            },
          ],
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "normalSub",
        },
        "_PI_optListSub": Array [],
        "_PI_optionalSub": WithDirectParts {
          "$id": "ID-71",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$id": "ID-67",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "container": null,
                "name": "+",
                "propertyIndex": undefined,
                "propertyName": "",
              },
              "container": [Circular],
              "propertyIndex": undefined,
              "propertyName": "visibility",
              "typeName": "VisibilityKind",
            },
            "container": [Circular],
            "content": "stringLiteral",
            "optContent": 10,
            "propertyIndex": undefined,
            "propertyName": "part",
          },
          "_PI_partList": Array [
            PartConcept {
              "$id": "ID-68",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "#",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "otherString",
              "optContent": 0,
              "propertyIndex": 0,
              "propertyName": "partList",
            },
            PartConcept {
              "$id": "ID-69",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "-",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLiteralXXX",
              "optContent": 123,
              "propertyIndex": 1,
              "propertyName": "partList",
            },
            PartConcept {
              "$id": "ID-70",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "+",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLiteralYYY",
              "optContent": 0,
              "propertyIndex": 2,
              "propertyName": "partList",
            },
          ],
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optionalSub",
        },
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "partList",
      },
      SubConcept {
        "$id": "ID-83",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$id": "ID-80",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$id": "ID-79",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "+",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLiteral",
              "optContent": 10,
              "propertyIndex": undefined,
              "propertyName": "part",
            },
            "_PI_partList": Array [],
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "listSub",
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$id": "ID-76",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$id": "ID-75",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "container": null,
                "name": "+",
                "propertyIndex": undefined,
                "propertyName": "",
              },
              "container": [Circular],
              "propertyIndex": undefined,
              "propertyName": "visibility",
              "typeName": "VisibilityKind",
            },
            "container": [Circular],
            "content": "stringLiteral",
            "optContent": 10,
            "propertyIndex": undefined,
            "propertyName": "part",
          },
          "_PI_partList": Array [],
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "normalSub",
        },
        "_PI_optListSub": Array [
          WithDirectParts {
            "$id": "ID-82",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$id": "ID-81",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "container": null,
                  "name": "+",
                  "propertyIndex": undefined,
                  "propertyName": "",
                },
                "container": [Circular],
                "propertyIndex": undefined,
                "propertyName": "visibility",
                "typeName": "VisibilityKind",
              },
              "container": [Circular],
              "content": "stringLit",
              "optContent": 1440,
              "propertyIndex": undefined,
              "propertyName": "part",
            },
            "_PI_partList": Array [],
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "optListSub",
          },
        ],
        "_PI_optionalSub": WithDirectParts {
          "$id": "ID-78",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$id": "ID-77",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "_PI_pathname": Array [
                "#",
              ],
              "_PI_referred": VisibilityKind {
                "$id": "ID-3",
                "$typename": "VisibilityKind",
                "container": null,
                "name": "#",
                "propertyIndex": undefined,
                "propertyName": "",
              },
              "container": [Circular],
              "propertyIndex": undefined,
              "propertyName": "visibility",
              "typeName": "VisibilityKind",
            },
            "container": [Circular],
            "content": "stringLiteral",
            "optContent": 10,
            "propertyIndex": undefined,
            "propertyName": "part",
          },
          "_PI_partList": Array [],
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optionalSub",
        },
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "partList",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "partsOfParts",
  },
  "container": TestParserModel {
    "$id": "ID-47",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "myName",
  "propertyIndex": undefined,
  "propertyName": "parts",
}
`;

exports[`Parser properties of type  Part with Optionals present 1`] = `
PartsTest {
  "$id": "ID-46",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$id": "ID-45",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [
      PartConcept {
        "$id": "ID-43",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "+",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteral",
        "optContent": 10,
        "propertyIndex": 0,
        "propertyName": "optList",
      },
      PartConcept {
        "$id": "ID-44",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "+",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralYYY",
        "optContent": 0,
        "propertyIndex": 1,
        "propertyName": "optList",
      },
    ],
    "_PI_optPart": PartConcept {
      "$id": "ID-39",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "visibility",
        "typeName": "VisibilityKind",
      },
      "container": [Circular],
      "content": "stringLiteral",
      "optContent": 10,
      "propertyIndex": undefined,
      "propertyName": "optPart",
    },
    "_PI_part": PartConcept {
      "$id": "ID-38",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "container": null,
          "name": "+",
          "propertyIndex": undefined,
          "propertyName": "",
        },
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "visibility",
        "typeName": "VisibilityKind",
      },
      "container": [Circular],
      "content": "stringLiteral",
      "optContent": 10,
      "propertyIndex": undefined,
      "propertyName": "part",
    },
    "_PI_partList": Array [
      PartConcept {
        "$id": "ID-40",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "#",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "otherString",
        "optContent": 0,
        "propertyIndex": 0,
        "propertyName": "partList",
      },
      PartConcept {
        "$id": "ID-41",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "-",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralXXX",
        "optContent": 123,
        "propertyIndex": 1,
        "propertyName": "partList",
      },
      PartConcept {
        "$id": "ID-42",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "container": null,
            "name": "+",
            "propertyIndex": undefined,
            "propertyName": "",
          },
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "visibility",
          "typeName": "VisibilityKind",
        },
        "container": [Circular],
        "content": "stringLiteralYYY",
        "optContent": 0,
        "propertyIndex": 2,
        "propertyName": "partList",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "directParts",
  },
  "_PI_partsOfParts": null,
  "container": TestParserModel {
    "$id": "ID-37",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "myName",
  "propertyIndex": undefined,
  "propertyName": "parts",
}
`;

exports[`Parser properties of type  Primitive  1`] = `
PrimitivesTest {
  "$id": "ID-14",
  "$typename": "PrimitivesTest",
  "_PI_prim": Prim {
    "$id": "ID-8",
    "$typename": "Prim",
    "container": [Circular],
    "primBoolean": true,
    "primIdentifier": "EenNaam",
    "primListBoolean": Array [
      true,
      false,
      true,
      false,
    ],
    "primListIdentifier": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumber": Array [
      10,
      20,
    ],
    "primListString": Array [
      "TEKST",
      "TEKST",
    ],
    "primNumber": 19,
    "primString": "TEKST",
    "propertyIndex": undefined,
    "propertyName": "prim",
  },
  "_PI_primExtra": PrimsWithExtraText {
    "$id": "ID-9",
    "$typename": "PrimsWithExtraText",
    "container": [Circular],
    "primBooleanWithExtra": false,
    "primIdentifierWithExtra": "EenNaam",
    "primListBooleanWithExtra": Array [
      false,
      true,
      false,
    ],
    "primListIdentifierWithExtra": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumberWithExtra": Array [
      67,
      98,
    ],
    "primListStringWithExtra": Array [
      "TEKST",
      "TEXT",
    ],
    "primNumberWithExtra": 45,
    "primStringWithExtra": "TEKST",
    "propertyIndex": undefined,
    "propertyName": "primExtra",
  },
  "_PI_separator": PrimsWithSeparator {
    "$id": "ID-10",
    "$typename": "PrimsWithSeparator",
    "container": [Circular],
    "primListBooleanSeparator": Array [
      true,
      false,
    ],
    "primListIdentifierSeparator": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "primListStringSeparator": Array [
      "iets",
      "wat",
    ],
    "propertyIndex": undefined,
    "propertyName": "separator",
  },
  "_PI_separatorOpt": PrimsWithSeparator {
    "$id": "ID-12",
    "$typename": "PrimsWithSeparator",
    "container": [Circular],
    "primListBooleanSeparator": Array [
      true,
      false,
    ],
    "primListIdentifierSeparator": Array [],
    "primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "primListStringSeparator": Array [],
    "propertyIndex": undefined,
    "propertyName": "separatorOpt",
  },
  "_PI_terminator": PrimsWithTerminator {
    "$id": "ID-11",
    "$typename": "PrimsWithTerminator",
    "container": [Circular],
    "primListBooleanTerminator": Array [
      true,
    ],
    "primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "primListNumberTerminator": Array [
      30,
    ],
    "primListStringTerminator": Array [
      "iets",
    ],
    "propertyIndex": undefined,
    "propertyName": "terminator",
  },
  "_PI_terminatorOpt": PrimsWithTerminator {
    "$id": "ID-13",
    "$typename": "PrimsWithTerminator",
    "container": [Circular],
    "primListBooleanTerminator": Array [],
    "primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "primListNumberTerminator": Array [],
    "primListStringTerminator": Array [
      "iets",
    ],
    "propertyIndex": undefined,
    "propertyName": "terminatorOpt",
  },
  "container": TestParserModel {
    "$id": "ID-7",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": [Circular],
    "_PI_primWith": null,
    "_PI_ref": null,
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "someName",
  "propertyIndex": undefined,
  "propertyName": "prim",
}
`;

exports[`Parser properties of type  Primitive with Keyword projection  1`] = `
PrimsWithKeywordTest {
  "$id": "ID-24",
  "$typename": "PrimsWithKeywordTest",
  "_PI_primWith": Array [
    PrimKeyword {
      "$id": "ID-16",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": true,
      "propertyIndex": 0,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-17",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": false,
      "propertyIndex": 1,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-18",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": true,
      "propertyIndex": 2,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-19",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": false,
      "propertyIndex": 3,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-20",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": true,
      "propertyIndex": 4,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-21",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": false,
      "propertyIndex": 5,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-22",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": false,
      "propertyIndex": 6,
      "propertyName": "primWith",
    },
    PrimKeyword {
      "$id": "ID-23",
      "$typename": "PrimKeyword",
      "container": [Circular],
      "primBoolean": true,
      "propertyIndex": 7,
      "propertyName": "primWith",
    },
  ],
  "container": TestParserModel {
    "$id": "ID-15",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": [Circular],
    "_PI_ref": null,
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "myName",
  "propertyIndex": undefined,
  "propertyName": "primWith",
}
`;

exports[`Parser properties of type  Ref  1`] = `
RefsTest {
  "$id": "ID-94",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$id": "ID-87",
    "$typename": "WithDirectRefs",
    "_PI_ref": PiElementReference {
      "_PI_pathname": Array [
        "someName.otherName.xxx.yyy",
      ],
      "_PI_referred": null,
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "ref",
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "name1.ff.gg.yuio",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 3,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "directRefs",
  },
  "_PI_indirectRefs": null,
  "_PI_withSeparator": RefsWithSeparator {
    "$id": "ID-93",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$id": "ID-90",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "optList",
      },
      WithDirectRefs {
        "$id": "ID-91",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "optList",
      },
      WithDirectRefs {
        "$id": "ID-92",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "optList",
      },
    ],
    "_PI_partList": Array [
      WithDirectRefs {
        "$id": "ID-88",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 3,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "partList",
      },
      WithDirectRefs {
        "$id": "ID-89",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "partList",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "withSeparator",
  },
  "container": TestParserModel {
    "$id": "ID-86",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": [Circular],
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "myName",
  "propertyIndex": undefined,
  "propertyName": "ref",
}
`;

exports[`Parser properties of type  Ref with Optionals present 1`] = `
RefsTest {
  "$id": "ID-106",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$id": "ID-96",
    "$typename": "WithDirectRefs",
    "_PI_optRef": PiElementReference {
      "_PI_pathname": Array [
        "nameA",
      ],
      "_PI_referred": null,
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "optRef",
      "typeName": "RefConcept",
    },
    "_PI_optRefList": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "nameZ",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "optRefList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "nameY.sdfsgargh.HERA",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "optRefList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "nameX",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "optRefList",
        "typeName": "RefConcept",
      },
    ],
    "_PI_ref": PiElementReference {
      "_PI_pathname": Array [
        "someName.x34565",
      ],
      "_PI_referred": null,
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "ref",
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "_PI_pathname": Array [
          "name1.d45fgh",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 2,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
      PiElementReference {
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": 3,
        "propertyName": "refList",
        "typeName": "RefConcept",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "directRefs",
  },
  "_PI_indirectRefs": WithSubSubRefs {
    "$id": "ID-102",
    "$typename": "WithSubSubRefs",
    "_PI_optList": Array [
      WithDirectRefs {
        "$id": "ID-101",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optRef",
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 3,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "optList",
      },
    ],
    "_PI_optPart": WithDirectRefs {
      "$id": "ID-98",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "optRef",
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 0,
          "propertyName": "optRefList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "nameY",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 1,
          "propertyName": "optRefList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 2,
          "propertyName": "optRefList",
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "ref",
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "_PI_pathname": Array [
            "name1",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 0,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 1,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "name3",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 2,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 3,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
      ],
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "optPart",
    },
    "_PI_part": WithDirectRefs {
      "$id": "ID-97",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "optRef",
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 0,
          "propertyName": "optRefList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "nameY.h56",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 1,
          "propertyName": "optRefList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 2,
          "propertyName": "optRefList",
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "container": [Circular],
        "propertyIndex": undefined,
        "propertyName": "ref",
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "_PI_pathname": Array [
            "name1.WREQWR.gag",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 0,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 1,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "name3.fghy",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 2,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
        PiElementReference {
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": 3,
          "propertyName": "refList",
          "typeName": "RefConcept",
        },
      ],
      "container": [Circular],
      "propertyIndex": undefined,
      "propertyName": "part",
    },
    "_PI_partList": Array [
      WithDirectRefs {
        "$id": "ID-99",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optRef",
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 3,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "partList",
      },
      WithDirectRefs {
        "$id": "ID-100",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optRef",
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 3,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "partList",
      },
    ],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "indirectRefs",
  },
  "_PI_withSeparator": RefsWithSeparator {
    "$id": "ID-105",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$id": "ID-103",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optRef",
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 3,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 0,
        "propertyName": "optList",
      },
      WithDirectRefs {
        "$id": "ID-104",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "optRef",
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "optRefList",
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "container": [Circular],
          "propertyIndex": undefined,
          "propertyName": "ref",
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 0,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 1,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 2,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
          PiElementReference {
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "container": [Circular],
            "propertyIndex": 3,
            "propertyName": "refList",
            "typeName": "RefConcept",
          },
        ],
        "container": [Circular],
        "propertyIndex": 1,
        "propertyName": "optList",
      },
    ],
    "_PI_partList": Array [],
    "container": [Circular],
    "propertyIndex": undefined,
    "propertyName": "withSeparator",
  },
  "container": TestParserModel {
    "$id": "ID-95",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": [Circular],
    "container": null,
    "name": "",
    "propertyIndex": undefined,
    "propertyName": "",
  },
  "name": "myName",
  "propertyIndex": undefined,
  "propertyName": "ref",
}
`;
